@@ -16,6 +16,14 @@ Description: Ubiquity slideshow for Ubuntu
  A slideshow intended for the Ubiquity installer, designed as a quick 
  introduction to Ubuntu.
 
+Package: ubiquity-slideshow-ubuntu-upgrade
+Architecture: all
+Provides: ubiquity-slideshow
+Depends: ${misc:Depends}
+Description: Ubiquity slideshow for Ubuntu
+ A slideshow intended for the Ubuntu upgrade tool, providing an introduction
+ to the latest features.
+
 Package: ubiquity-slideshow-kubuntu
 Architecture: all
 Provides: ubiquity-slideshow
