@@ -1,0 +1,1 @@
+build/ubuntu-upgrade/* /usr/share/ubiquity-slideshow
