@@ -1,0 +1,42 @@
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+	<title>ubiquity-slideshow-ubuntu</title>
+	
+	<link href="link/general.css" rel="stylesheet" type="text/css" />
+	
+	<base target="_blank" />
+	
+	<script type="text/javascript" src="link/prototype.js"></script>
+	<script type="text/javascript" src="link/effects.js"></script>
+	<script type="text/javascript" src="link/fastinit.js"></script>
+	<script type="text/javascript" src="link/crossfade.js"></script>
+	
+	<script type="text/javascript" src="directory.js"></script>
+	<script type="text/javascript" src="link/slideshow.js"></script>
+</head>
+
+<body>
+
+<div id="container">
+	<div id="slideshow">
+		
+		<!-- Slides go here. Simply place the following snippet
+		in the order you wish it to appear, replacing "MY SLIDE"
+		with the filename of your slide.
+		<div><a href="MY SLIDE" class="load"></a></div> -->
+		<div><a href="welcome.html" class="load"></a></div>
+	</div>
+</div>
+
+<div id="debug-controls">
+<input type="button" id="prev-slide" value="&lt;"/>
+<input type="text"   id="current-slide" />
+<input type="button" id="next-slide" value="&gt;"/>
+</div>
+
+</body>
+
+</html>
