@@ -8,11 +8,12 @@ ubiquity-slideshow-ubuntu (13) UNRELEASED; urgency=low
     slides have actually been translated.
   * Added htmlclean to remove unnecessary content from built
     slides.
+  * Added room for ubuntu-upgrade slides.
 
   [ Lionel Le Folgoc ]
   * Initial import of Xubuntu slides lp: #514011
 
- -- Dylan McCall <dylan@dylan-laptop>  Sun, 24 Jan 2010 23:42:14 -0800
+ -- Dylan McCall <dylan@dylan-laptop>  Tue, 02 Feb 2010 13:09:28 -0800
 
 ubiquity-slideshow-ubuntu (12) lucid; urgency=low
 
